chore: add favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Light theme favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/light/favicon-32x32.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="16x16" href="/light/favicon-16x16.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/x-icon" href="/light/favicon.ico" media="(prefers-color-scheme: light)">
+
+    <link rel="apple-touch-icon" href="/light/apple-touch-icon.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="192x192" href="/light/android-chrome-192x192.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="512x512" href="/light/android-chrome-512x512.png" media="(prefers-color-scheme: light)">
+
+    <!-- Dark theme favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/dark/favicon-32x32.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="16x16" href="/dark/favicon-16x16.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/x-icon" href="/dark/favicon.ico" media="(prefers-color-scheme: dark)">
+
+    <link rel="apple-touch-icon" href="/dark/apple-touch-icon.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="192x192" href="/dark/android-chrome-192x192.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="512x512" href="/dark/android-chrome-512x512.png" media="(prefers-color-scheme: dark)">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DAVINCI Voting App</title>
     <meta name="description" content="Decentralized voting platform powered by DAVINCI protocol" />
