feat: proper PWA support

--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Light theme favicons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/light/favicon-32x32.png" media="(prefers-color-scheme: light)">
-    <link rel="icon" type="image/png" sizes="16x16" href="/light/favicon-16x16.png" media="(prefers-color-scheme: light)">
-    <link rel="icon" type="image/x-icon" href="/light/favicon.ico" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="32x32" href="/light/favicon-32x32.png" media="(prefers-color-scheme: light)" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/light/favicon-16x16.png" media="(prefers-color-scheme: light)" />
+    <link rel="icon" type="image/x-icon" href="/light/favicon.ico" media="(prefers-color-scheme: light)" />
 
-    <link rel="apple-touch-icon" href="/light/apple-touch-icon.png" media="(prefers-color-scheme: light)">
-    <link rel="icon" type="image/png" sizes="192x192" href="/light/android-chrome-192x192.png" media="(prefers-color-scheme: light)">
-    <link rel="icon" type="image/png" sizes="512x512" href="/light/android-chrome-512x512.png" media="(prefers-color-scheme: light)">
-
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-1024.png" />
     <!-- Dark theme favicons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/dark/favicon-32x32.png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="16x16" href="/dark/favicon-16x16.png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/x-icon" href="/dark/favicon.ico" media="(prefers-color-scheme: dark)">
-
-    <link rel="apple-touch-icon" href="/dark/apple-touch-icon.png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="192x192" href="/dark/android-chrome-192x192.png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="512x512" href="/dark/android-chrome-512x512.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="32x32" href="/dark/favicon-32x32.png" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/dark/favicon-16x16.png" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/x-icon" href="/dark/favicon.ico" media="(prefers-color-scheme: dark)" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DAVINCI Voting App</title>
     <meta name="description" content="Decentralized voting platform powered by DAVINCI protocol" />
+
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#F5F1E8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="DAVINCI">
   </head>
   <body>
     <div id="root"></div>
