chore: add opengraph tags

--- a/index.html
+++ b/index.html
@@ -13,15 +13,33 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/dark/favicon-16x16.png" media="(prefers-color-scheme: dark)" />
     <link rel="icon" type="image/x-icon" href="/dark/favicon.ico" media="(prefers-color-scheme: dark)" />
 
+
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#F5F1E8" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="DAVINCI" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- HTML Meta Tags -->
     <title>DAVINCI Voting App</title>
     <meta name="description" content="Decentralized voting platform powered by DAVINCI protocol" />
 
-    <!-- PWA Meta Tags -->
-    <meta name="theme-color" content="#F5F1E8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="DAVINCI">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://app.davinci.vote" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="DAVINCI Voting App" />
+    <meta property="og:description" content="Decentralized voting platform powered by DAVINCI protocol" />
+    <meta property="og:image" content="/images/opengraph_generic.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="app.davinci.vote" />
+    <meta property="twitter:url" content="https://app.davinci.vote" />
+    <meta name="twitter:title" content="DAVINCI Voting App" />
+    <meta name="twitter:description" content="Decentralized voting platform powered by DAVINCI protocol" />
+    <meta name="twitter:image" content="/images/opengraph_generic.png" />
+
   </head>
   <body>
     <div id="root"></div>
