--- a/index.html
+++ b/index.html
@@ -45,4 +45,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  <script defer data-domain="app.davinci.vote" src="https://plausible.io/js/script.outbound-links.pageview-props.tagged-events.js"></script>
+  <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 </html>
